Not all issues with the little bit of horizontal scrolling were solved...

--- a/css/hanjunme.css
+++ b/css/hanjunme.css
@@ -328,9 +328,7 @@ body {
 }
 
 .carousel {
- visibility:collapse;
- margin-left: -20px;
- margin-right: -20px;
+ visibility: collapse;
  height: 0px;
 }
  .carousel .container {
